-correction de l'affichage de "Finition", qui n'était pas aligné avec la combobox à sa droite

--- a/Prototype/www/style/arch.css
+++ b/Prototype/www/style/arch.css
@@ -366,6 +366,16 @@ td > input {
     height: 40px !important;
 }
 
+#typeFinition > div {
+    display: flex !important;
+    flex-direction: row !important;
+    flex-wrap: nowrap !important;
+}
+
+#typeFinition > div:first-of-type {
+    line-height: 60px;
+}
+
 #divers {
     background-image: url(./img/divers.svg);
     background-repeat: no-repeat;
